--- a/src/viewController/searchView.fxml
+++ b/src/viewController/searchView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="viewController.SearchController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
          <children>
@@ -20,7 +20,7 @@
                   <Button onMouseClicked="#searchExact" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Search Exact" />
                </children>
             </HBox>
-            <ListView fx:id="displayField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="305.0" />
+            <ListView fx:id="displayField" onMouseClicked="#openMoreInfo" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="305.0" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
